fasterxml dependency added, UserController fixed