@@ -1,7 +1,6 @@
 package mate.academy.spring.controller;
 
-import mate.academy.spring.model.User;
-import mate.academy.spring.model.dto.UserResponseDto;
+import mate.academy.spring.dto.UserResponseDto;
 import mate.academy.spring.service.UserService;
 import mate.academy.spring.service.mapper.UserMapper;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -10,6 +9,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/users")
@@ -31,7 +31,7 @@ public class UserController {
     public List<UserResponseDto> getAllUsers() {
         return userService.getAll().stream()
                 .map(userMapper::parse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @GetMapping("/inject")
